G1 parsing (1)